# Crew.ai.sovereign.orchest

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
knowledge/: sovereign_engine_overview.md  system_validation_sop.md  trust_validation_sop.md
src/sovereign_crew/: __init__.py  crew.py
src/sovereign_crewai/: __init__.py  crew.py  main.py
src/sovereign_crewai/config/: agents.yaml  tasks.yaml
src/sovereign_crewai/knowledge/: demand_validation_sop.md  outreach_templates.md
src/sovereign_crewai/tools/: __init__.py
tools/: __init__.py  fonnte_tool.py  sovereign_api_tool.py  supabase_tool.py
