[project]
name = "sovereign-crewai"
version = "3.2.0"
description = "Sovereign Business Engine - 8 Autonomous AI Agents for 3-Layer Market Validation"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,litellm]>=1.12.0,<2.0.0",
    "crewai-tools>=1.12.0,<2.0.0",
]

[project.scripts]
sovereign = "sovereign_crewai.main:run"
train = "sovereign_crewai.main:train"
replay = "sovereign_crewai.main:replay"
test_crew = "sovereign_crewai.main:test"

[tool.crewai]
type = "crew"
